# TECH-EUROPE-HACK

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  index.html  n8n.json  n8n_2.json  n8n_4.json  tailwind.config.ts
src/: App.tsx  index.css
src/components/: StatusPill.tsx
src/components/layout/: AppShell.tsx  AppSidebar.tsx
src/lib/: api.ts
src/pages/: Access.tsx  Analytics.tsx  Events.tsx  Integrations.tsx  Onboardings.tsx  QuestionnairePreview.tsx  Repositories.tsx  Settings.tsx  TemplateComposer.tsx  Templates.tsx
webapp/backend/: .gitignore  Dockerfile  pyproject.toml  seed.py
webapp/backend/.ropeproject/: autoimport.db-journal
webapp/backend/alembic/: alembic.ini  env.py
webapp/backend/alembic/versions/: 001_initial_schema.py  002_add_user_profile_fields.py  003_add_company_default_role.py
webapp/backend/app/: main.py
webapp/backend/app/api/: deps.py
webapp/backend/app/api/routes/: auth.py  companies.py  events.py  onboardings.py  questionnaires.py  repos.py  template_parts.py  templates.py  toolsets.py
webapp/backend/app/core/: config.py  security.py
webapp/backend/app/db/: base.py  session.py
webapp/backend/app/models/: company.py  event.py  onboarding.py  questionnaire.py  repo.py  role_profile.py  template.py  user.py
webapp/backend/app/schemas/: __init__.py  auth.py  common.py  company.py  onboarding.py  questionnaire.py  repo.py  template.py  user.py
webapp/backend/app/services/: scan_services.py  toolset_generator.py
webapp/backend/tests/: conftest.py
webapp/frontend/: index.html
webapp/frontend/src/: App.tsx  (+1 more)
(+24 files in other folders)
